refactor: Renamed the property to ddl-auto instead of dll-auto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=Point-Of-Sale
 spring.datasource.url=jdbc:mysql://localhost:3306/pos
 spring.datasource.username=pos_dev
 spring.datasource.password=pos_password
-spring.jpa.hibernate.dll-auto=create
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.hikari.maximum-pool-size=20
